--- a/output/index.html
+++ b/output/index.html
@@ -14,7 +14,7 @@
   <body>
       <header>
           <nav class="navbar" id="navbar">
-              <span class="navbar-brand mb-0 h1 w-100 text-center p-5 mb-2 bg-danger text-white" id="navbar-text">My Team Profile</span>
+              <span class="navbar-brand mb-0 h1 w-100 text-center" id="navbar-text">My Team Profile</span>
              
           </nav>
       </header>
